# festival-scraper

./: .gitignore  LICENSE  Pipfile  README.md  Taskfile.yml  handler.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  test-deploy-master.yml  test-pr.yml
aws/: cloudformation.yml
src/adapter/: github.py  s3.py  spotify.py
src/festivals/: bands.py
src/utils/: artist_images.py
tests/: conftest.py  test_handler.py
tests/adapter/: test_github.py  test_s3.py  test_spotify.py  test_ssm.py
tests/festivals/: test_bands.py
tests/utils/: test_artist_images.py
