[project]
name = "festival-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "aiometer>=0.5.0",
    "beautifulsoup4>=4.12.3",
    "boto3>=1.35.68",
    "httpx>=0.27.2",
]

[dependency-groups]
dev = [
    "moto>=5.0.21",
    "pytest-httpx>=0.34.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "boto3-stubs[s3,ssm]>=1.35.68",
    "ruff>=0.8.0",
]
